--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "font-awesome": "^4.7.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
